Increased Hamburger dropdown size to stop overlap of the Logo

--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -253,7 +253,7 @@ footer {
     .header__navbar__nav-menu {
         position: fixed;
         left: -100%;
-        top: 4rem;
+        top: 4.5rem;
         flex-direction: column;
         background-color: rgb(0, 0, 0);
         width: 100%;
